--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/slizbethellis/mongo-technica/issues"
   },
-  "homepage": "https://github.com/slizbethellis/mongo-technica#readme"
+  "homepage": "https://github.com/slizbethellis/mongo-technica#readme",
+  "dependencies": {
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
+    "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^5.0.4"
+  }
 }
