--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
-    "mongoose": "^5.0.4"
+    "g": "^2.0.1",
+    "handlebars.moment": "^1.0.4",
+    "moment": "^2.20.1",
+    "mongoose": "^5.0.4",
+    "morgan": "^1.9.0",
+    "nodemon": "^1.17.3",
+    "npm": "^5.8.0"
   }
 }
