--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "An app to scrape Ars Technica articles",
   "main": "server.js",
+  "engines": {
+    "node": ">= 9.7.1",
+    "npm": ">= 5.8.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
